# roo_logging

./: BUILD  LICENSE  MODULE.bazel  README.rst  library.json  library.properties
examples/check/: check.ino
examples/colored_stderr/: colored_stderr.ino
examples/conditional/: conditional.ino
examples/custom_failure_function/: custom_failure_function.ino
examples/debug_mode/: debug_mode.ino
examples/logging/: logging.ino
examples/logging_custom_objects/: loggin_custom_objects.ino
examples/loglevel/: loglevel.ino
examples/per_module/: per_module.ino
examples/walltime/: walltime.ino
src/: roo_logging.h
src/roo_logging/: base.h  check.cpp  check.h  color.h  config.cpp  config.h  demangle.cpp  demangle.h  exit.cpp  exit.h  log_message.cpp  log_message.h  log_severity.h  logfile.cpp  logfile.h  predict.h  sink.cpp  sink.h  stacktrace.cpp  stacktrace.h  stderr.cpp  stderr.h  stream.cpp  stream.h  stream_arduino.cpp  stream_arduino.h  stream_espidf.cpp  stream_espidf.h  symbolize.cpp  symbolize.h
test/: roo_logging_test.cpp
