module(name = "roo_logging", version = "1.5.4")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "roo_testing", version = "1.3.1")

bazel_dep(name = "roo_backport", version = "1.2.2")
bazel_dep(name = "roo_flags", version = "1.2.2")
bazel_dep(name = "roo_time", version = "1.4.2")
bazel_dep(name = "roo_threads", version = "1.2.2")
